Fix text in markdown appearing too light

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,6 @@ body {
   margin: 0;
   padding: 0;
   background-color: #006666;
-  color: rgb(223, 223, 223);
 }
 
 .dark-to-light {
